# k-qr

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/application/: generate_qr.rs  mod.rs
backend/src/domain/: error.rs  mod.rs  qr.rs
backend/src/infrastructure/: config.rs  mod.rs  qr_adapter.rs
backend/src/infrastructure/http/: handlers.rs  mod.rs  server.rs  style.css  views.rs
backend/src/ports/: mod.rs
