[package]
name = "k-qr"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.27", features = ["axum"] }
qrcode = "0.14"
image = "0.25"
tower-http = { version = "0.6.8", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0"
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
base64 = "0.22.1"
async-trait = "0.1.89"

[dev-dependencies]
mockall = "0.14.0"
